kubernetes/backend.yaml
# Deployment
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: backend
  labels:
    app: kmp
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: kmp-backend:v1
          ports:
            - containerPort: 3000
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: kmp
spec:
  ports:
    - name: backend
      port: 3000
  selector:
    app: backend
  type: NodePort
