kubernetes/frontend.yaml
# Deployment
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: kmp
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: kmp-frontend:v1.0.0
          ports:
            - containerPort: 80
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: kmp
spec:
  ports:
    - name: spa
      protocol: TCP
      port: 80
  selector:
    app: frontend
  type: ClusterIP
